2006-07-02  Arnaud Cornet <arnaud.cornet@gmail.com>

	* src/irc.c: added /bip subcommands:
	ON_CONNECT_SEND [:string]
	AWAY_NICK [nick]
	FOLLOW_NICK (true|false)
	IGNORE_FIRST_NICK (true|false)
	* src/irc.c: fix null pointer deference on wierd irc server.
	* bip: release 0.5.3

2006-06-08  Arnaud Cornet <arnaud.cornet@gmail.com>

	* samples/bip.conf: change default nick in sample file
	* src/irc.c: fix nick desync between client and server

2006-03-08  Arnaud Cornet <arnaud.cornet@gmail.com>

	* bip: release 0.5.2

2006-03-07  Arnaud Cornet <arnaud.cornet@gmail.com>

	* src/irc.c: count one argument on +e when parsing modes

2006-02-21  Arnaud Cornet <arnaud.cornet@gmail.com>

	* who: Re-organized and fixed fatal.

2006-02-05  Arnaud Cornet <arnaud.cornet@gmail.com>
	* who: merged patch from lappz (Peter Zijlstra) to avoid polluting who
	replies to all clients when a client does /who.

2006-01-29  Arnaud Cornet <arnaud.cornet@gmail.com>

        Now use automake 1.9
	fix misleading error message on wrong password
	merged man pages
	* samples: fixed typo in sample
	* SSL certs: Allows to trust when not connected
	Typos in error messages.
	Relicensing to proper GPL with exception for OpenSSL

2005-04-21  Arnaud Cornet <nohar@t1r.net>

        * src: Now use autoconf/automake
	bip is now public :)