@@ -8,9 +8,6 @@
 
 - use gnutls
 - MODE #channel and WHO #channel on join
-11:23 < KiBi> Un /away truc chose automatique quand plus aucun client n'est
-              attaché.
-- in english: automatic command when no more client is connected
 
 - this:
 Hi Arnaud,
@@ -27,3 +24,9 @@ Best regards,
 Whoopie
 --
 Donner des droits plus méchants au log global
+
+DONE:
+
+11:23 < KiBi> Un /away truc chose automatique quand plus aucun client n'est
+              attaché.
+- in english: automatic command when no more client is connected
